working on sets-> difference.

--- a/Day-10_Programming_Expert/18_sets.ipynb
+++ b/Day-10_Programming_Expert/18_sets.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "5a21c117-aa3c-426c-9ff6-3ed416621810",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee511fc8-27b4-4f7b-8556-86ff634202bb",
+   "id": "4291aa47-1556-4131-903a-dd7e1d7c60e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "4e77e27a-0c92-47c5-8761-e49ad0d9c911",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "f5e682b2-d2b2-4904-83d9-c13c606d2799",
    "metadata": {},
    "outputs": [
@@ -109,8 +109,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b36cec54-d514-436a-895b-adad972c5411",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = set()\n",
+    "\n",
+    "for i in range(1, 6):\n",
+    "    y.add(i)\n",
+    "    \n",
+    "print(y)\n",
+    "print(type(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0e01f4c3-f2df-4796-b07d-736db7f8eebf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "35e91071-f7d5-4813-b10d-918e4f45a7e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd4bfeda-3e8b-4bca-b445-62b680a110b3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -124,6 +180,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0222f914-11be-4e82-99de-5b8f53a2cf22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = set()\n",
+    "\n",
+    "for i in range(1, 6):\n",
+    "    y.add(i)\n",
+    "    \n",
+    "print(len(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9af6df74-e8db-4eee-9df8-fc56a1b1fae3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "6a4c37cf-f772-443d-ac2c-71e395dfc9b9",
    "metadata": {},
@@ -132,35 +219,299 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5cad0458-421d-407e-ab1b-87a8fa6a0602",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 in y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4edcb55e-fbc0-4791-b685-cb331b6ddfae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "e6d290b2-847b-4b4b-b919-b25f6d68ed0e",
    "metadata": {},
    "source": [
-    "## .union() method"
+    "## .union() method\n",
+    "\n",
+    "A `union` allows us to combine two sets."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "84ada8e2-35d9-4424-99ff-55838aee50d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5}\n",
+      "{6, 7, 8, 9, 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = set()\n",
+    "y = set()\n",
+    "for i in range(11):\n",
+    "    if i < 6:\n",
+    "        x.add(i)\n",
+    "    else:\n",
+    "        y.add(i)\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bb933300-519b-465b-8af4-01f783da55d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.union(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b501066-2eee-4b38-a456-6b1d567456e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "99ddad22-b13f-4dd3-a629-25abede0e7a4",
    "metadata": {},
    "source": [
-    "## .intersection() method"
+    "## .intersection() method\n",
+    "\n",
+    "A `intersection` gives us common in two sets."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "41bcaa1d-94a1-478d-bb14-c4e1d9b51ddb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6}\n",
+      "{6, 7, 8, 9, 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = set()\n",
+    "y = set()\n",
+    "for i in range(11):\n",
+    "    if i <= 5:\n",
+    "        x.add(i)\n",
+    "    elif i == 6:\n",
+    "        x.add(i)\n",
+    "        y.add(i)\n",
+    "    else:\n",
+    "        y.add(i)\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "31c68ea3-434e-437a-acad-0dd11983920f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{6}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.intersection(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ba8138f-5ecd-48f9-ae25-677ff923ae46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "8919002c-3e50-4bbc-bfbd-bbed91b50285",
    "metadata": {},
    "source": [
-    "## .difference() method"
+    "## .difference() method\n",
+    "\n",
+    "A `difference` gives us the unique elements of firse set w.r.t other."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5a46efe5-defc-4579-8b65-32d40ab19ae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 3, 4, 5}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.difference(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b06678fc-8241-494b-9584-66be5e2d1b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{7, 8, 9, 10}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.difference(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe1b763d-d69c-4316-aaab-9fb7fb99dc73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "4e1a1f4d-5662-4694-99d7-ed8feed45440",
    "metadata": {},
    "source": [
-    "## .symmetric_difference() method"
+    "## .symmetric_difference() method\n",
+    "\n",
+    "it will combine no-common elements in both sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "18317a66-6f46-4d12-b2ec-09d985b03720",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6}\n",
+      "{6, 7, 8, 9, 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "585669a8-1898-4cb8-b5b7-3f59bd9a6866",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 3, 4, 5, 7, 8, 9, 10}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.symmetric_difference(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "463cb5e0-2c90-47c3-a67c-c3d89798f874",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 3, 4, 5, 7, 8, 9, 10}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.symmetric_difference(x)"
    ]
   },
   {
@@ -172,12 +523,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6ffe19c-915b-4c30-baba-ebaa471e871c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "1e167f66-a19f-4df7-8b7f-d156584158bd",
    "metadata": {},
    "source": [
     "## .difference_update() method"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "423ef563-fbb3-44fb-8297-e24aceba343b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -188,12 +555,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae4302f-e80b-4edc-814b-6370eef61b9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "bd659e32-806d-4ec6-9662-f4d75ab519a9",
    "metadata": {},
    "source": [
     "## subset and superset examples"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da0103dc-97f7-4d3d-9653-39f7154fa515",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
