--- a/Day-10_Programming_Expert/18_sets.ipynb
+++ b/Day-10_Programming_Expert/18_sets.ipynb
@@ -524,8 +524,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "b6ffe19c-915b-4c30-baba-ebaa471e871c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6}\n",
+      "{6, 7, 8, 9, 10}\n",
+      "Now x is: {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = set()\n",
+    "y = set()\n",
+    "for i in range(11):\n",
+    "    if i <= 5:\n",
+    "        x.add(i)\n",
+    "    elif i == 6:\n",
+    "        x.add(i)\n",
+    "        y.add(i)\n",
+    "    else:\n",
+    "        y.add(i)\n",
+    "print(x)\n",
+    "print(y)\n",
+    "\n",
+    "x.update(y)\n",
+    "print(f\"Now x is: {x}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "f576ae05-fe5c-4820-9287-e59cd0a3fa4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6}\n",
+      "{6, 7, 8, 9, 10}\n",
+      "Now y is: {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = set()\n",
+    "y = set()\n",
+    "for i in range(11):\n",
+    "    if i <= 5:\n",
+    "        x.add(i)\n",
+    "    elif i == 6:\n",
+    "        x.add(i)\n",
+    "        y.add(i)\n",
+    "    else:\n",
+    "        y.add(i)\n",
+    "print(x)\n",
+    "print(y)\n",
+    "\n",
+    "y.update(x)\n",
+    "print(f\"Now y is: {y}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64cfb1fd-e4bd-4f2c-93c7-c49694393814",
    "metadata": {},
    "outputs": [],
    "source": []
