--- a/Day-10_Programming_Expert/02_Programming_Fundamental/19_Exceptions.ipynb
+++ b/Day-10_Programming_Expert/02_Programming_Fundamental/19_Exceptions.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "38fdc9fe-f05d-4da7-a341-9891e6baad60",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHello World\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHello World\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'Hello World'"
      ]
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "0fc52b3e-ed4c-49fc-b9d5-247f46b34ecb",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "4c53a64b-92bf-4c2e-a1f7-c321f55cf6fa",
    "metadata": {},
    "outputs": [
@@ -108,6 +108,7 @@
    "source": [
     "try:\n",
     "    int(\"Hello, World!\")\n",
+    "    5/0\n",
     "except ValueError as e:\n",
     "    print(f\"Invalid statement: {e}\")\n",
     "\n",
@@ -132,11 +133,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f7014d72-4a54-41ea-8519-a5dd590bb37e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can't Divide by Zero: division by zero\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # int(\"Hello, World!\")\n",
+    "    5/0\n",
+    "except ValueError as e:\n",
+    "    print(f\"Invalid statement: {e}\")\n",
+    "except ZeroDivisionError as e:\n",
+    "    print(f\"Can't Divide by Zero: {e}\")\n",
+    "\n",
+    "print(\"Done\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,8 +168,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ab471764-a61d-4fa3-8b5a-3549ad1e842f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid Statement: invalid literal for int() with base 10: 'Hello, World!'\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # 5/0\n",
+    "    int(\"Hello, World!\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Invalid Statement: {e}\")\n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c46ead1d-1f8c-40e9-a91b-7ce2b716bc40",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -164,11 +208,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cad111bc-41ae-44cb-a02a-eaf73623883e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid Statement: invalid literal for int() with base 10: 'Hello, World!'\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # 5/0\n",
+    "    int(\"Hello, World!\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Invalid Statement: {e}\")\n",
+    "finally:\n",
+    "    print(\"Done\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,8 +241,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d033a53c-1e7e-44c6-a5c4-c20072602207",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "The programmer is an Idot. He should be publically ashamed.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe programmer is an Idot. He should be publically ashamed.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mException\u001b[0m: The programmer is an Idot. He should be publically ashamed."
+     ]
+    }
+   ],
+   "source": [
+    "raise Exception(\"The programmer is an Idot. He should be publically ashamed.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0f2ebd5-3b22-4baf-bd54-e50c394be7f2",
+   "metadata": {},
+   "source": [
+    "## This is actually an exception\n",
+    "```\n",
+    "---------------------------------------------------------------------------\n",
+    "Exception                                 Traceback (most recent call last)\n",
+    "Input In [15], in <module>\n",
+    "----> 1 raise Exception(\"The programmer is an Idot. He should be publically ashamed.\")\n",
+    "\n",
+    "Exception: The programmer is an Idot. He should be publically ashamed.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a66b7ac1-31e3-43c0-8fd9-eaec046c6e6d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -196,8 +295,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "735a8ff9-798f-42c6-aa37-cfb946147a1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Runtime Error\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [17]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTesting Runtime Error\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;241;43m5\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis is Runtime Error \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(\"Testing Runtime Error\")\n",
+    "    5/0\n",
+    "except RuntimeError as e:\n",
+    "    print(f\"This is Runtime Error {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf41047b-8bba-49cc-9939-3ed0625303ef",
    "metadata": {},
    "outputs": [],
    "source": []
