Working on functions completed.

--- a/Day-10_Programming_Expert/02_Programming_Fundamental/20_functions.ipynb
+++ b/Day-10_Programming_Expert/02_Programming_Fundamental/20_functions.ipynb
@@ -1,17 +1,124 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c0439176-7221-471a-80a2-97cee4b8002d",
+   "metadata": {},
+   "source": [
+    "## Declaring a Function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c9c4c498-e0e4-45e6-a711-88c5986596a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(a, b):\n",
+    "    return a+b\n",
+    "\n",
+    "add(4, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d13d0d2e-debe-40b5-add0-68e557fb9dd7",
+   "metadata": {},
+   "source": [
+    "## Taking unknown amount of arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "346f5922-5bb1-499b-b0e0-7ea61856a243",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(a, *more):\n",
+    "    for number in more:\n",
+    "        a += number\n",
+    "    return a\n",
+    "\n",
+    "add(4, 5, 6, 7, 8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc5dda65-c7e8-4de7-919d-911366c00e81",
+   "metadata": {},
+   "source": [
+    "## range()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "96dc9ec4-9d71-45ce-b2cc-adda4434f161",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(range(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e7d03db3-3b2e-42d0-8ac3-6bf9d832e36e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ef3a759-ddb1-4216-8b79-bdac25993f91",
+   "id": "3d89fb93-0ac7-4774-804e-caf27c08a5e8",
    "metadata": {},
    "outputs": [],
    "source": []
