--- a/Day-10_Programming_Expert/02_Programming_Fundamental/24_sorting.ipynb
+++ b/Day-10_Programming_Expert/02_Programming_Fundamental/24_sorting.ipynb
@@ -1,17 +1,119 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87c05e33-72f8-4f51-b81c-df5ed00a1af8",
+   "cell_type": "markdown",
+   "id": "64abf28d-6d2f-48a6-a32f-fb4c396c2719",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## .sort()\n",
+    "\n",
+    "This return the sorted list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ff411a05-7f7a-470c-a18c-cd929c186914",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [5, 2, 6, 8, 1]\n",
+    "lst.sort()\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98b82670-c5ca-42ef-93ba-e3ba006ad811",
+   "metadata": {},
+   "source": [
+    "## sorted()\n",
+    "\n",
+    "This return the sorted list without changeing the previous one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a40b1591-e86e-4659-81fd-830ed09ddc1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 6, 8]\n",
+      "[5, 2, 6, 8, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [5, 2, 6, 8, 1]\n",
+    "print(sorted(lst))\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cfb1d88-c7ed-4aa7-9e97-d94080f132b6",
+   "metadata": {},
+   "source": [
+    "## Sorting in reverse order\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a5f2458c-faa2-4e0c-bf2f-bc4f2ae0ac6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 6, 5, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [5, 2, 6, 8, 1]\n",
+    "lst.sort(reverse=True)\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "59bcaae4-232b-40b6-82b3-057404b762e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 6, 5, 2, 1]\n",
+      "[5, 2, 6, 8, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [5, 2, 6, 8, 1]\n",
+    "print(sorted(lst, reverse=True))\n",
+    "print(lst)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e253d43-6577-44a0-8c1b-6860d083832c",
+   "id": "370bf67f-f2d4-4fea-ab66-5d33dfb399e5",
    "metadata": {},
    "outputs": [],
    "source": []
