--- a/Day-20_Recursion-1/recursion.ipynb
+++ b/Day-20_Recursion-1/recursion.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3e65db01-bcbd-41ce-8b81-fae4de2d6c9a",
    "metadata": {},
    "outputs": [
@@ -23,16 +23,16 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 5\n"
+      " 10\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "120"
+       "3628800"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f9bb4dc3-8f16-4889-99ec-7c9276b4d046",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "0ae98315-d4c8-4255-9780-51d58300e180",
    "metadata": {},
    "outputs": [
@@ -66,16 +66,16 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 16\n"
+      " 0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "20922789888000"
+       "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,11 +87,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b57ab061-3424-4df8-85e1-98cf77555af1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fact(n):\n",
+    "    if n==0:\n",
+    "        return 1\n",
+    "    return n*fact(n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b5a86196-1362-416a-bc09-7940d5068a92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fact1(n):\n",
+    "    if n==0:\n",
+    "        return 1\n",
+    "    smalloutput=fact(n-1)\n",
+    "    return n*smalloutput"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "131414cb-3a1f-4c0a-8a93-f459ae03cc48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.setrecursionlimit(3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6831238e-a479-496d-8a5b-dd39088db9e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3000\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "fact(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fd7a63f9-5aa8-47e1-a30a-c7d227bd0567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isSorted(a):\n",
+    "    l=len(a)\n",
+    "    if l==0 or l==1:\n",
+    "        return True\n",
+    "    if a[0]>a[1]:\n",
+    "        return False\n",
+    "    smallerList=a[1:]\n",
+    "    isSmallerListSorted=isSorted(smallerList)\n",
+    "    if isSmallerListSorted:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "82224d7f-a27e-4000-a083-ff51e47cd13e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5,6,7,8,9]\n",
+    "isSorted(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa91f3c6-6a0f-42a5-8a67-4038e2827eac",
+   "metadata": {},
+   "source": [
+    "# Sum of Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7876bf07-8c5a-4b91-b714-f1f760bacc84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fact1(n):\n",
+    "    if len(n)==0:\n",
+    "        return 0\n",
+    "    # smalloutput=fact(n-1)\n",
+    "    return n[0] + fact1(n[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e5c29474-3899-41c3-af5c-0c4a05f0f927",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fact1([1, 2, 3, 4, 5])"
+   ]
   }
  ],
  "metadata": {
