Working on Classes.

--- a/Day-24_OOP-1/Classes_and_Object.ipynb
+++ b/Day-24_OOP-1/Classes_and_Object.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7576c353-0e92-4773-9e88-4829079b983e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2642d2e6-74d4-4b2c-8661-a6c53128e764",
    "metadata": {},
    "outputs": [],
@@ -30,14 +30,14 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'30000'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12Jan\n",
+      "500\n",
+      "1Jan\n",
+      "30000\n"
+     ]
     }
    ],
    "source": [
@@ -50,10 +50,10 @@
     "        self.amount=amount\n",
     "obj2=ExpenseTracker(\"12Jan\",\"Dinner with Friends\",\"Debit\",\"500\")\n",
     "obj3=ExpenseTracker(\"1Jan\",\"Salary Credited\",\"Credit\",\"30000\")\n",
-    "obj2.date\n",
-    "obj2.amount\n",
-    "obj3.date\n",
-    "obj3.amount"
+    "print(obj2.date)\n",
+    "print(obj2.amount)\n",
+    "print(obj3.date)\n",
+    "print(obj3.amount)"
    ]
   },
   {
