--- a/Day-24_OOP-1/Predict_the_output.ipynb
+++ b/Day-24_OOP-1/Predict_the_output.ipynb
@@ -202,8 +202,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a2ee98ee-7480-4fa9-a5a5-d8aa3c29b60b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    def print_student_details():\n",
+    "        print(self.name, end= \" \")\n",
+    "        print(self.age)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def isTeen(age):\n",
+    "        return age>16\n",
+    "\n",
+    "a = Student.isTeen(18)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b4986a7b-ac40-4daf-890e-898b97b564e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Student' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mage)\n\u001b[0;32m      9\u001b[0m s \u001b[38;5;241m=\u001b[39m Student(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRohan\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m20\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ms\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Student' object has no attribute 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.__name = name\n",
+    "        self.age = age\n",
+    "    def print_student_details():\n",
+    "        print(self.__name, end= \" \")\n",
+    "        print(self.age)\n",
+    "\n",
+    "s = Student(\"Rohan\",20)\n",
+    "print(s.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "531a7aed-efe8-4ed6-a39a-f830d70114d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rohan 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.__name = name\n",
+    "        self.age = age\n",
+    "    def print_student_details(self):\n",
+    "        print(self.__name, end= \" \")\n",
+    "        print(self.age)\n",
+    "s = Student(\"Rohan\",20)\n",
+    "s.print_student_details()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c1c1f2c-d3b2-4c8b-9c17-3818e6483107",
    "metadata": {},
    "outputs": [],
    "source": []
